--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header__container">
         <nav class="header-navigation">
           <a href="./index.html" class="logo header__logo logo--black link"
@@ -41,7 +41,7 @@
             </li>
           </ul>
         </nav>
-        
+
         <ul class="header-contacts list">
           <li class="header-contacts__item">
             <a href="mailto:info@devstudio.com" class="header-contacts__link link">
@@ -60,8 +60,93 @@
             </a>
           </li>
         </ul>
+        <button type="button" class="menu-open-btn btn" data-menu-open>
+          <svg class="menu-open-btn__menu-icon" width="40px" height="40px">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+
+      <div class="mob-menu is-hidden" data-menu>
+        <div class="container mob-menu-container">
+          <div>
+            <button type="button" class="menu-close-btn btn" data-menu-close>
+              <svg class="menu-close-btn__menu-icon" width="40px" height="40px">
+                <use href="./images/icons.svg#icon-menu-close"></use>
+              </svg>
+            </button>
+            <nav class="mob-menu-navigation">
+              <ul class="mob-menu-nav list">
+                <li class="mob-menu-nav__item">
+                  <a href="./index.html" class="mob-menu-nav__link link ">Студия</a>
+                </li>
+                <li class="mob-menu-nav__item">
+                  <a href="./portfolio.html" class="mob-menu-nav__link link current-link">Портфолио</a>
+                </li>
+                <li class="mob-menu-nav__item">
+                  <a href="" class="mob-menu-nav__link link">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <ul class="mob-menu-contacts list">
+              <li class="mob-menu-contacts__item">
+                <a
+                  href="tel:+380961111111"
+                  class="mob-menu-contacts__link link mob-menu-contacts__link--blue"
+                >
+                  +38 096 111 11 11
+                </a>
+              </li>
+              <li class="mob-menu-contacts__item">
+                <a href="mailto:info@devstudio.com" class="mob-menu-contacts__link link">
+                  info@devstudio.com
+                </a>
+              </li>
+            </ul>
+            <ul class="mob-menu-soc list">
+              <li class="mob-menu-soc__item">
+                <a
+                  href=""
+                  class="mob-menu-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram
+                </a>
+              </li>
+              <li class="mob-menu-soc__item">
+                <a
+                  href=""
+                  class="mob-menu-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Twitter
+                </a>
+              </li>
+              <li class="mob-menu-soc__item">
+                <a
+                  href=""
+                  class="mob-menu-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Facebook
+                </a>
+              </li>
+              <li class="mob-menu-soc__item">
+                <a
+                  href=""
+                  class="mob-menu-soc__link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >LinkedIn
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <main>
       <section class="section portfolio">
@@ -96,11 +181,17 @@
                       media="(min-width:1200px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-1-tab.jpg 1x, ./images/img-portfolio-1-tab-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-1-tab.jpg    1x,
+                        ./images/img-portfolio-1-tab-2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-1-mob.jpg 1x, ./images/img-portfolio-1-mob-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-1-mob.jpg    1x,
+                        ./images/img-portfolio-1-mob-2x.jpg 2x
+                      "
                       media="(max-width:767px)"
                     />
                     <img
@@ -133,11 +224,17 @@
                       media="(min-width:1200px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-2-tab.jpg 1x, ./images/img-portfolio-2-tab-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-2-tab.jpg    1x,
+                        ./images/img-portfolio-2-tab-2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-2-mob.jpg 1x, ./images/img-portfolio-2-mob-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-2-mob.jpg    1x,
+                        ./images/img-portfolio-2-mob-2x.jpg 2x
+                      "
                       media="(max-width:767px)"
                     />
                     <img
@@ -170,11 +267,17 @@
                       media="(min-width:1200px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-3-tab.jpg 1x, ./images/img-portfolio-3-tab-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-3-tab.jpg    1x,
+                        ./images/img-portfolio-3-tab-2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-3-mob.jpg 1x, ./images/img-portfolio-3-mob-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-3-mob.jpg    1x,
+                        ./images/img-portfolio-3-mob-2x.jpg 2x
+                      "
                       media="(max-width:767px)"
                     />
                     <img
@@ -207,11 +310,17 @@
                       media="(min-width:1200px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-4-tab.jpg 1x, ./images/img-portfolio-4-tab-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-4-tab.jpg    1x,
+                        ./images/img-portfolio-4-tab-2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-4-mob.jpg 1x, ./images/img-portfolio-4-mob-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-4-mob.jpg    1x,
+                        ./images/img-portfolio-4-mob-2x.jpg 2x
+                      "
                       media="(max-width:767px)"
                     />
                     <img
@@ -244,11 +353,17 @@
                       media="(min-width:1200px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-5-tab.jpg 1x, ./images/img-portfolio-5-tab-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-5-tab.jpg    1x,
+                        ./images/img-portfolio-5-tab-2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-5-mob.jpg 1x, ./images/img-portfolio-5-mob-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-5-mob.jpg    1x,
+                        ./images/img-portfolio-5-mob-2x.jpg 2x
+                      "
                       media="(max-width:767px)"
                     />
                     <img
@@ -281,11 +396,17 @@
                       media="(min-width:1200px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-6-tab.jpg 1x, ./images/img-portfolio-6-tab-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-6-tab.jpg    1x,
+                        ./images/img-portfolio-6-tab-2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-6-mob.jpg 1x, ./images/img-portfolio-6-mob-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-6-mob.jpg    1x,
+                        ./images/img-portfolio-6-mob-2x.jpg 2x
+                      "
                       media="(max-width:767px)"
                     />
                     <img
@@ -318,11 +439,17 @@
                       media="(min-width:1200px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-7-tab.jpg 1x, ./images/img-portfolio-7-tab-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-7-tab.jpg    1x,
+                        ./images/img-portfolio-7-tab-2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-7-mob.jpg 1x, ./images/img-portfolio-7-mob-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-7-mob.jpg    1x,
+                        ./images/img-portfolio-7-mob-2x.jpg 2x
+                      "
                       media="(max-width:767px)"
                     />
                     <img
@@ -355,11 +482,17 @@
                       media="(min-width:1200px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-8-tab.jpg 1x, ./images/img-portfolio-8-tab-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-8-tab.jpg    1x,
+                        ./images/img-portfolio-8-tab-2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-8-mob.jpg 1x, ./images/img-portfolio-8-mob-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-8-mob.jpg    1x,
+                        ./images/img-portfolio-8-mob-2x.jpg 2x
+                      "
                       media="(max-width:767px)"
                     />
                     <img
@@ -392,11 +525,17 @@
                       media="(min-width:1200px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-9-tab.jpg 1x, ./images/img-portfolio-9-tab-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-9-tab.jpg    1x,
+                        ./images/img-portfolio-9-tab-2x.jpg 2x
+                      "
                       media="(min-width:768px)"
                     />
                     <source
-                      srcset="./images/img-portfolio-9-mob.jpg 1x, ./images/img-portfolio-9-mob-2x.jpg 2x"
+                      srcset="
+                        ./images/img-portfolio-9-mob.jpg    1x,
+                        ./images/img-portfolio-9-mob-2x.jpg 2x
+                      "
                       media="(max-width:767px)"
                     />
                     <img
@@ -442,14 +581,10 @@
                 >
               </li>
               <li class="address__item">
-                <a class="address__link link" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+                <a class="address__link link" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li class="address__item">
-                <a class="address__link link" href="tel:+380991111111"
-                  >+38 099 111 11 11</a
-                >
+                <a class="address__link link" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
@@ -511,5 +646,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
